--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,14 +20,30 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+
+	@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
 	:root {
 		--accent: 124, 58, 237;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
 	}
 	html {
-		font-family: system-ui, sans-serif;
 		background-color: #F6F6F6;
+		font-family: 'Montserrat', system-ui, sans-serif;
 	}
+	body {
+
+	}
+
+	html,
+	body {
+		box-sizing: border-box;
+		height: 100%;
+		margin: 0;
+		max-height: 100%;
+		padding: 0;
+	}
+
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
